# Shortnail

./: .gitignore  .gitlab-ci.yml  .gitmodules  ArbInt.py  CMakeLists.txt  README.md  build_circt.sh  build_deps.sh  build_shortnail.sh  flake.nix
.github/workflows/: clangFormatCheck.yml
cmake/modules/: AddSHORTNAIL.cmake  CMakeLists.txt  SHORTNAILConfig.cmake.in
docs/: ConversionPasses.md  CoreDSLDialect.md  README.md  input-ir.md
include/shortnail/Conversion/: AnalyzeISAX.h  CMakeLists.txt  CoreDSLToPy.h  MergeISAX.h  Passes.h  Passes.td
include/shortnail/Dialect/CoreDSL/: CMakeLists.txt  CoreDSL.td  CoreDSLDialect.h  CoreDSLDirectives.h  CoreDSLDirectives.tpp  CoreDSLInterfaces.td  CoreDSLOps.h  CoreDSLOps.td
lib/Conversion/: CMakeLists.txt  PassDetail.h
lib/Conversion/AnalyzeISAX/: AnalyzeISAX.cpp  CMakeLists.txt
lib/Conversion/CoreDSLLegalizeCF/: CMakeLists.txt  CoreDSLLegalizeCF.cpp
lib/Conversion/CoreDSLLiftCFToSCF/: CMakeLists.txt  CoreDSLLiftCFToSCF.cpp
lib/Conversion/CoreDSLSwitchToIf/: CMakeLists.txt  CoreDSLSwitchToIf.cpp
lib/Conversion/CoreDSLToPy/: CMakeLists.txt  CoreDSLToPy.cpp
lib/Conversion/MergeISAX/: CMakeLists.txt  MergeISAX.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/CoreDSL/: CMakeLists.txt  CoreDSLDialect.cpp  CoreDSLDirectives.cpp  CoreDSLOps.cpp
nix/: circt-llvm.nix  circt.nix  circt_export_verilog.patch  circt_ortools_required.patch  ortools.nix
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Conversion/AnalyzeISAX/: analyze-alias-mem.mlir  analyze-alias.mlir  analyze-basic.mlir  analyze-clobbers-all-regs.mlir  analyze-const-local.mlir  analyze-error-no-isax.mlir  analyze-error-no-output.mlir  analyze-hwarith.mlir  analyze-imm.mlir  analyze-mask-field.mlir  analyze-mem-through-arith.mlir  analyze-noncontiguous-ooo.mlir  analyze-noncontiguous-reversed.mlir  analyze-noncontiguous.mlir  analyze-pc-write.mlir  analyze-register-io.mlir  analyze-scf-for.mlir  analyze-scf-if.mlir  analyze-side-effects.mlir  analyze-signed-imm.mlir
test/Conversion/CoreDSLLegalizeCF/: switch_test.mlir
test/Conversion/CoreDSLSwitchToIf/: switch_test.mlir
test/CoreDSL/: addrspace.mlir  alt_mac.mlir  canonicalize.mlir  concurrency.mlir  illegal_mem_expr.mlir  instruction_encodings.mlir  ops.mlir  register_fields.mlir  registers.mlir  signedness-error.mlir  switch.mlir  switch_errors.mlir
test/MergeISAX/: merge_autoinc_brimm_and_edge_cases.mlir  merge_autoinc_brimm_dotprod_indirectjmp_sparkle_sbox_sqrt_zol.mlir
test/shortnail-opt/: shortnail-opt.mlir
tools/: CMakeLists.txt
tools/shortnail-lsp-server/: CMakeLists.txt  shortnail-lsp-server.cpp
tools/shortnail-opt/: CMakeLists.txt  shortnail-opt.cpp
